k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: true
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: docker-static-service
          servicePort: 80
        path: /styles/
  - http:
      paths:
      - backend:
          serviceName: docker-static-service
          servicePort: 80
        path: /images/
  - http:
      paths:
      - path: /
        backend:
          serviceName: docker-dynamic-service
          servicePort: 80
